# ainms

./: .gitignore  AGENTS.md  application.md  docker-compose.yml
.omo/plans/: eliminate-console-flash.md
admin/: Dockerfile  components.json  middleware.ts  next.config.ts  package-lock.json  package.json
admin/app/: globals.css  layout.tsx
admin/app/(admin)/: layout.tsx
admin/app/(admin)/activity/: page.tsx
admin/app/(admin)/activity-summaries/: page.tsx
admin/app/(admin)/ai-activity/: page.tsx
admin/app/(admin)/alert-rules/: page.tsx
admin/app/(admin)/alerts/: page.tsx
admin/app/(admin)/analytics/: page.tsx
admin/app/(admin)/app-rules/: page.tsx
admin/app/(admin)/app-validations/: page.tsx
admin/app/(admin)/companies/: page.tsx
admin/app/(admin)/dashboard/: page.tsx
admin/app/(admin)/devices/: page.tsx
admin/app/(admin)/employees/: page.tsx
admin/app/(admin)/install-tokens/: page.tsx
admin/app/(admin)/installed-apps/: page.tsx
admin/app/(admin)/projects/: page.tsx
admin/app/(admin)/roles/: page.tsx
admin/app/(admin)/screenshots/: page.tsx
admin/app/(admin)/targeted-screenshots/: page.tsx
admin/app/(auth)/: layout.tsx
admin/app/(auth)/login/: page.tsx
admin/components/layout/: admin-sidebar.tsx  topbar.tsx
admin/components/shared/: connection-status-dot.tsx  socket-indicator.tsx  status-badge.tsx
admin/lib/: socket.ts
admin/lib/api/: activity-summaries.ts  ai-activity.ts  alerts.ts  auth.ts  client.ts  companies.ts  employees.ts  install-tokens.ts  installed-apps.ts  projects.ts  roles.ts  targeted-schedules.ts
admin/lib/auth/: session.ts
admin/lib/hooks/: use-company-list.ts  use-device-list.ts  use-employee-list.ts  use-socket-status.ts
admin/lib/utils/: badges.ts  format.ts
admin/types/: api.ts
agent/: Cargo.toml
agent/crates/agent-collectors/: Cargo.toml
agent/crates/agent-collectors/examples/: test_chrome_launcher.rs  track_usage.rs
agent/crates/agent-collectors/src/: active_window.rs  app_usage.rs  browser.rs  browser_launcher.rs  installed_apps.rs  lib.rs  network.rs
agent/crates/agent-collectors/src/os/: linux.rs  macos.rs  mod.rs  windows.rs
agent/crates/agent-core/: Cargo.toml  agent-core.exe.manifest  build.rs
agent/crates/agent-core/examples/: test_audit_shoutout.rs  test_dialog.rs
agent/crates/agent-core/src/: activity_buffer.rs  config.rs  dialog.rs  main.rs  os.rs  rule_engine.rs
agent/crates/agent-ml/: Cargo.toml
agent/crates/agent-ml/examples/: agent_demo.rs  generate_text.rs  test_vision.rs  verify_model.rs
agent/crates/agent-ml/src/: agent.rs  config.rs  error.rs  lib.rs  mock.rs  provider.rs  tool_search.rs  types.rs
agent/crates/agent-ml/src/llama_cpp/: mod.rs  prompt.rs  provider.rs
agent/crates/agent-screenshot/: Cargo.toml
agent/crates/agent-screenshot/examples/: capture_test.rs
agent/crates/agent-screenshot/src/: lib.rs  linux.rs  windows.rs
agent/crates/agent-screenshot/tests/: service_mode_screenshot.rs
agent/crates/agent-service/: Cargo.toml
agent/crates/agent-service/src/: lib.rs
agent/crates/agent-service/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
agent/crates/agent-store/: Cargo.toml
agent/crates/agent-store/src/: lib.rs
agent/crates/agent-tray/: Cargo.toml
agent/crates/agent-tray/src/: lib.rs
agent/crates/agent-uploader/: Cargo.toml
agent/crates/agent-uploader/src/: lib.rs
agent/crates/agent-watchdog/: Cargo.toml
agent/crates/agent-watchdog/src/: lib.rs
agent/crates/scan-test/: Cargo.toml
agent/crates/scan-test/src/: main.rs
agent/scripts/: ainms-agent.toml  install-ainms-agent.ps1
agent/shared/agent-comms/: Cargo.toml
agent/shared/agent-comms/src/: lib.rs  socket.rs
agent/shared/agent-proto/: Cargo.toml
agent/shared/agent-proto/src/: config.rs  error.rs  events.rs  lib.rs
backend/: .golangci.yml  Dockerfile  Makefile  go.mod  go.sum
backend/cmd/server/: main.go
backend/configs/: config.dev.yaml
backend/internal/config/: config.go
backend/internal/domain/: domain.go  user.go
backend/internal/handler/: auth.go  company.go  compliance.go  device.go  download.go  employee.go  events.go  health.go  helpers.go  install_script.go  install_token.go  installed_apps.go  models.go  project.go  query.go  query_test.go  role.go  role_test.go  rules.go  screenshot.go  socket.go  targeted_schedule.go  websocket.go
backend/internal/middleware/: auth.go
backend/internal/ollama/: client.go
backend/internal/repository/clickhouse/: db.go  events.go
backend/internal/service/: auth.go  company.go  compliance.go  employee.go  enrollment.go  install_token.go  installed_app.go  project.go  role.go  screenshot.go  socket.go  targeted_schedule.go
backend/internal/store/redis/: conn.go
backend/migrations/clickhouse/: 001_app_usage_events.sql  002_app_usage_summary.sql  003_popup_events.sql  004_agent_health.sql  005_screenshot_metadata.sql  006_tamper_events.sql  007_device_fleet_status.sql  008_screenshot_ondemand.sql
backend/migrations/postgres/: 001_create_tenants.sql  002_create_companies.sql  003_create_employees.sql  004_create_devices.sql  005_create_device_sessions.sql  006_create_policies.sql  007_create_app_classifications.sql  008_create_alert_rules.sql  009_create_alerts_fired.sql  010_create_popup_explanations.sql  011_create_screenshot_requests.sql  012_create_pending_commands.sql  013_create_employee_registrations.sql  014_create_users.sql  015_alter_screenshot_requests_add_image_path.sql  016_create_roles.sql  017_create_activity_summaries.sql  018_create_app_usage_events.sql  019_alter_app_usage_summaries_add_date.sql  020_create_compliance_alerts.sql  021_alter_popup_events_add_alert_id.sql  022_create_installed_apps.sql  023_create_installed_app_validations.sql  024_create_targeted_screenshot_schedules.sql  025_create_projects.sql  026_create_activity_analysis_cache.sql  027_add_cron_expression_to_schedules.sql
backend/scripts/: migrate.go
graphify-out/: GRAPH_REPORT.md  ainms-callflow.html  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
playwright-bot/: bot.py
(+22 files in other folders)
