[workspace]
resolver = "2"
members = [
    "crates/agent-core",
    "crates/agent-collectors",
    "crates/agent-tray",
    "crates/agent-ml",
    "crates/agent-store",
    "crates/agent-uploader",
    "crates/agent-watchdog",
    "crates/agent-service",
    "crates/agent-screenshot",
    "crates/scan-test",
    "shared/agent-proto",
    "shared/agent-comms",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
clap = { version = "4", features = ["derive"] }
gethostname = "0.4"

rusqlite = { version = "0.32", features = ["bundled"] }
agent-proto = { path = "shared/agent-proto" }
agent-comms = { path = "shared/agent-comms" }
rust_socketio = { version = "0.6", features = ["async"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
async-trait = "0.1"
encoding_rs = "0.8"