[package]
name = "agent-collectors"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
agent-proto = { workspace = true }
agent-comms = { workspace = true }