[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent-core"
path = "src/main.rs"

[[bin]]
name = "check-apis"
path = "src/bin/check-apis.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
gethostname = { workspace = true }
agent-proto = { workspace = true }
agent-comms = { workspace = true }
agent-store = { path = "../agent-store" }
agent-uploader = { path = "../agent-uploader" }
agent-collectors = { path = "../agent-collectors" }
agent-service = { path = "../agent-service" }
agent-screenshot = { path = "../agent-screenshot" }
agent-ml = { path = "../agent-ml" }
toml = "0.8"
sha2 = "0.10"