[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent-core"
path = "src/main.rs"

[[bin]]
name = "check-apis"
path = "src/bin/check-apis.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
gethostname = { workspace = true }
agent-proto = { workspace = true }
agent-comms = { workspace = true }
agent-store = { path = "../agent-store" }
agent-uploader = { path = "../agent-uploader" }
agent-collectors = { path = "../agent-collectors" }
agent-service = { path = "../agent-service" }
agent-screenshot = { path = "../agent-screenshot" }
agent-ml = { path = "../agent-ml" }
toml = "0.8"
sha2 = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_RemoteDesktop",
    "Win32_System_Threading",
    "Win32_System_Environment",
    "Win32_System_Console",
] }