[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent-core"
path = "src/main.rs"

[[bin]]
name = "check-apis"
path = "src/bin/check-apis.rs"

[[bin]]
name = "audit_test"
path = "src/bin/audit_test.rs"
required-features = ["llama-cpp"]

[features]
default = []
llama-cpp = ["agent-ml/llama-cpp"]
mtmd = ["agent-ml/mtmd"]
cuda = ["agent-ml/cuda"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
gethostname = { workspace = true }
agent-proto = { workspace = true }
agent-comms = { workspace = true }
agent-store = { path = "../agent-store" }
agent-uploader = { path = "../agent-uploader" }
agent-collectors = { path = "../agent-collectors" }
agent-service = { path = "../agent-service" }
agent-screenshot = { path = "../agent-screenshot" }
agent-ml = { path = "../agent-ml" }
toml = "0.8"
sha2 = "0.10"
base64 = "0.22"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_RemoteDesktop",
    "Win32_System_Threading",
    "Win32_System_Environment",
    "Win32_System_Console",
    "Win32_Graphics_Gdi",
    "Win32_UI_Controls",
] }

[build-dependencies]
embed-resource = "2.5"