[package]
name = "agent-ml"
version = "0.1.0"
edition = "2021"

[features]
default = []
llama-cpp = ["llama-cpp-2"]
mtmd = ["llama-cpp-2", "llama-cpp-2/mtmd"]
cuda = ["llama-cpp-2/cuda"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
agent-proto = { workspace = true }
async-trait = { workspace = true }
encoding_rs = { workspace = true }
llama-cpp-2 = { version = "0.1", optional = true }
base64 = "0.22"
image = { version = "0.25", optional = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }