[package]
name = "agent-comms"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rust_socketio = { workspace = true }
futures-util = { workspace = true }
openssl-sys = { workspace = true }
agent-proto = { workspace = true }